--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed src="CV.pdf" width="100%" height="600px" type="application/pdf" />
+<embed src="CV.pdf" width="100%" height="100%" type="application/pdf" />
