--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<embed src="CV.pdf" width="100%" height="100%" type="application/pdf" />
+<object data="CV.pdf" type="application/pdf" width="100%" height="95%">
+  <p>
+    Your browser does not support PDFs. <a href="CV.pdf">Download the PDF</a>.
+  </p>
+</object>
