--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           width: auto;
           height: auto;
           overflow: visible;
-          background-color: transparent;
+          background-color: white;
         }
         .d {
           display: none;
@@ -256,7 +256,7 @@
       }
       @media screen {
         #sidebar {
-          background-color: white;
+          background-color: #2f3236;
           background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI0IiBoZWlnaHQ9IjQiPgo8cmVjdCB3aWR0aD0iNCIgaGVpZ2h0PSI0IiBmaWxsPSIjNDAzYzNmIj48L3JlY3Q+CjxwYXRoIGQ9Ik0wIDBMNCA0Wk00IDBMMCA0WiIgc3Ryb2tlLXdpZHRoPSIxIiBzdHJva2U9IiMxZTI5MmQiPjwvcGF0aD4KPC9zdmc+");
         }
         #outline {
